# iTraining

./: .gitmodules  README.en.md  README.md
C++/: C++学习大纲.md
C++/code-style/: 修改.txt  编程规范.docx
C++/codes/2023-07/伍振东/Assignments/Assignments_02/Assignments_qt/: CMakeLists.txt
C++/codes/2023-07/伍振东/Assignments/Assignments_02/Assignments_qt/src/: CMakeLists.txt  main.cpp
C++/codes/2023-07/伍振东/Assignments/Assignments_02/Assignments_qt/src/map/: CMakeLists.txt  Map.cpp  Map.h
C++/codes/2023-07/伍振东/Assignments/Assignments_02/Assignments_qt/src/point/: CMakeLists.txt  Point.cpp  Point.h
C++/codes/2023-07/王瑞/Assignment3/version2/: CMakeLists.txt
C++/codes/2023-07/王瑞/Assignment3/version2/include/: astar.hpp  point.hpp  testmap.hpp
C++/codes/2023-07/王瑞/Assignment3/version2/src/: CMakeLists.txt  astar.cpp  point.cpp  testmap.cpp
C++/codes/2023-07/王瑞/Assignment3/version2/test/: MyAstar_test.cpp
C++/codes/2023-07/王瑞/C++PrimerPlus/Chapter8/: 8-1.cpp  8-2.cpp  8-3.cpp  8-4.cpp  8-5.cpp  8-6.cpp  8-7.cpp  CMakeLists.txt
C++/codes/2023-07/郭帆/assignment1/: CMakeLists.txt  main.cpp
C++/codes/2023-07/郭帆/assignment1/include/: graph.hpp
C++/codes/2023-07/郭帆/assignment1/src/: graph.cpp
C++/codes/2023-07/郭帆/assignment3/: CMakeLists.txt  README.md  main.cpp
C++/codes/2023-07/郭帆/assignment3/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
C++/codes/2023-07/郭帆/assignment3/GUI/astar/: CMakeLists.txt  astar.h  astarnode.h
C++/codes/2023-07/郭帆/assignment3/GUI/gridmap/: gridmap.h  mapnode.h
C++/codes/2023-07/郭帆/assignment3/astar/: CMakeLists.txt  astar.cpp  myheap.h
C++/codes/2023-07/郭帆/assignment3/gridmap/: gridmap.h
C++/codes/2023-07/郭帆/assignment3/point/: point.h
C++/codes/2024-07/zhangjinsen/project1/: CMakeLists.txt  Doxyfile  README.md
C++/codes/2024-07/zhangjinsen/project1/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c.js  CMakeCXXCompilerId_8cpp.html  CONTRIBUTING_8md.html  MyProjectLib_8dir_2src_2a___8cpp_8o_8d.html  MyProjectLib_8dir_2src_2main_8cpp_8o_8d.html  MyProject_8dir_2src_2a___8cpp_8o_8d.html  MyProject_8dir_2src_2main_8cpp_8o_8d.html  PULL__REQUEST__TEMPLATE_8md.html  README_8md.html  a___8h.html  a___8h__dep__incl.map  a___8h__dep__incl.md5  a___8h__incl.map  a___8h__incl.md5  a___8h_source.html  annotated.html  annotated_dup.js  classAStarAlgorithm-members.html  classAStarAlgorithm.html  classAStarAlgorithm.js  classAStarAlgorithm__coll__graph.map  classAStarAlgorithm__inherit__graph.md5  classGrid__-members.html  classGrid__.html  classGrid__.js  classPathFindingAlgorithm-members.html  classPathFindingAlgorithm.html  classPathFindingAlgorithm.js  classPathFindingAlgorithm__inherit__graph.map  classPathFindingAlgorithm__inherit__graph.md5  classes.html  dir_000014_000012.html  dir_000015_000012.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_181c00e2b942bc2bd301cc4650f9e5c8.html  dir_181c00e2b942bc2bd301cc4650f9e5c8.js  (+67 more)
C++/codes/2024-07/zhangjinsen/project1/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  (+3 more)
C++/codes/2024-07/zhangjinsen/project1/include/project/: a_.h  gra.h
C++/codes/2024-07/zhangjinsen/project1/latex/: refman.tex
C++/codes/2024-07/zhangjinsen/project1/src/: main.cpp
C++/codes/2024-07/zhangjinsen/project1/test/: CMakeLists.txt  test_main.cpp
C++/codes/2024-07/刘谦/Assignment/AStar/: CMakeLists.txt  README.md  test.cpp
C++/codes/2024-07/刘谦/Assignment/AStar/include/: AStarAlgorithm.h  GridMap.h  MapVisualizer.h  Node.h
C++/codes/2024-07/刘谦/Assignment/AStar/src/: AStarAlgorithm.cpp  CMakeLists.txt  GridMap.cpp  MapVisualizer.cpp  RandomMap.cpp
C++/codes/2024-07/宋彬彬/Chapter13Test4/: CMakeLists.txt  Port.cpp  Port.h  VintagePort.cpp  VintagePort.h  main.cpp
C++/codes/2024-07/宋彬彬/MyAStar/: CMakeLists.txt  out.txt  readme.md
C++/codes/2024-07/宋彬彬/MyAStar/src/: CMakeLists.txt  main.cpp
C++/codes/2024-07/宋彬彬/MyAStar/src/MyAStar/: CMakeLists.txt  MyAStar.cpp  MyAStar.hpp
C++/codes/2024-07/宋彬彬/MyAStar/src/MyMap/: CMakeLists.txt  MyMap.cpp  MyMap.hpp
C++/codes/2024-07/宋彬彬/MyAStar/src/MyPoint/: CMakeLists.txt  MyPoint.cpp  MyPoint.hpp
C++/codes/2024-07/宋彬彬/MyAStar/tests/: CMakeLists.txt  test_MyAStar.cpp
C++/codes/2024-07/苏坚荣/C++PrimerPlus/Chapter7/: 7_1.cpp  7_2.cpp  7_3.cpp  7_4.cpp  7_5.cpp  7_6.cpp  7_7.cpp  7_8.cpp  7_9.cpp  CMakeLists.txt
C++/codes/2024-07/赵正杰/Astar/src/: CMakeLists.txt  main.cpp
C++/codes/2024-07/赵正杰/Astar/src/Algorithm/: Astar.cpp  Astar.h  CMakeLists.txt
C++/codes/2024-07/赵正杰/Astar/src/Graph/: CMakeLists.txt  Graph.cpp  Graph.h
C++/codes/2024-07/赵正杰/Astar/src/Visualization/: CMakeLists.txt  Visual.cpp  Visual.h
C++/codes/2024-07/赵正杰/Astar/test/: CMakeLists.txt  test_case.cpp
C++/codes/2024-07/黄山/C++_exercise/chapter8/: CMakeLists.txt
C++/codes/2024-07/黄山/C++_exercise/chapter8/src/: 8-4.cpp  8-6.cpp
C++/codes/2024-07/黄山/C++_exercise/src/chapter13/codes/13-4/: CMakeLists.txt
C++/codes/2024-07/黄山/C++_exercise/src/chapter13/codes/13-4/src/: main.cpp
C++/codes/2024-07/黄山/C++_exercise/src/chapter8/: CMakeLists.txt
C++/codes/2024-07/黄山/C++_exercise/src/chapter8/src/: 8-6.cpp
C++/cpp_basic/: C++智能指针.md  C++进阶---pbds.md  C++进阶-新特性.md  CPP基础(七).md  CPP基础(九).md  CPP基础(五).md  CPP基础(八).md  CPP基础(六).md  CPP基础(十).md  CPP基础(十一).md  CPP基础(十三).md  CPP基础(十二).md  CPP基础(四).md  CPP基础知识(一).md  CPP基础知识(三).md  CPP基础知识(二).md  数值优化SIMD.md
C++/ppt/: C++20入门培训.pptx  C++标准化开发.pptx  DAG思路分享_龙帅英.pptx  水滴计划-答辩ppt模板.pptx  软件设计过程.pptx
C++/tools/: Glog使用.pptx  (+1 more)
EDA/: books.md
(+916 files in other folders)
